--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/QuanLyBanGiayOOP
 endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-12.8.0.jre11.jar=D:\\Downloads\\mssql-jdbc-12.8.0.jre11.jar
+file.reference.mssql-jdbc-12.8.0.jre11.jar-1=F:\\mssql-jdbc-12.8.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.8.0.jre11.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mssql-jdbc-12.8.0.jre11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
