--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,15 +36,22 @@ dist.jlink.output=${dist.jlink.dir}/QuanLyBanGiayOOP
 endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.11.jar=F:\\poi_chaytot\\thuvienpoi\\commons-codec-1.11.jar
+file.reference.commons-codec-1.11.jar-1=D:\\ky1_nam3\\OOP\\thuvienpoi\\commons-codec-1.11.jar
 file.reference.commons-collections4-4.2.jar=F:\\poi_chaytot\\thuvienpoi\\commons-collections4-4.2.jar
+file.reference.commons-collections4-4.2.jar-1=D:\\ky1_nam3\\OOP\\thuvienpoi\\commons-collections4-4.2.jar
 file.reference.commons-compress-1.18.jar=F:\\poi_chaytot\\thuvienpoi\\commons-compress-1.18.jar
+file.reference.commons-compress-1.18.jar-1=D:\\ky1_nam3\\OOP\\thuvienpoi\\commons-compress-1.18.jar
 file.reference.mssql-jdbc-12.8.0.jre11.jar=D:\\Downloads\\mssql-jdbc-12.8.0.jre11.jar
 file.reference.mssql-jdbc-12.8.0.jre11.jar-1=F:\\mssql-jdbc-12.8.0.jre11.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=..\\mssql-jdbc-8.4.1.jre8.jar
 file.reference.poi-4.0.1.jar=F:\\poi_chaytot\\thuvienpoi\\poi-4.0.1.jar
+file.reference.poi-4.0.1.jar-1=D:\\ky1_nam3\\OOP\\thuvienpoi\\poi-4.0.1.jar
 file.reference.poi-ooxml-4.0.1.jar=F:\\poi_chaytot\\thuvienpoi\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar-1=D:\\ky1_nam3\\OOP\\thuvienpoi\\poi-ooxml-4.0.1.jar
 file.reference.poi-ooxml-schemas-4.0.1.jar=F:\\poi_chaytot\\thuvienpoi\\poi-ooxml-schemas-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar-1=D:\\ky1_nam3\\OOP\\thuvienpoi\\poi-ooxml-schemas-4.0.1.jar
 file.reference.xmlbeans-3.0.2.jar=F:\\poi_chaytot\\thuvienpoi\\xmlbeans-3.0.2.jar
+file.reference.xmlbeans-3.0.2.jar-1=D:\\ky1_nam3\\OOP\\thuvienpoi\\xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -58,7 +65,14 @@ javac.classpath=\
     ${file.reference.poi-4.0.1.jar}:\
     ${file.reference.poi-ooxml-4.0.1.jar}:\
     ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
-    ${file.reference.xmlbeans-3.0.2.jar}
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${file.reference.commons-codec-1.11.jar-1}:\
+    ${file.reference.commons-collections4-4.2.jar-1}:\
+    ${file.reference.commons-compress-1.18.jar-1}:\
+    ${file.reference.poi-4.0.1.jar-1}:\
+    ${file.reference.poi-ooxml-4.0.1.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar-1}:\
+    ${file.reference.xmlbeans-3.0.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
