--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,8 @@ excludes=
 file.reference.commons-codec-1.11.jar=F:\\poi_chaytot\\thuvienpoi\\commons-codec-1.11.jar
 file.reference.commons-collections4-4.2.jar=F:\\poi_chaytot\\thuvienpoi\\commons-collections4-4.2.jar
 file.reference.commons-compress-1.18.jar=F:\\poi_chaytot\\thuvienpoi\\commons-compress-1.18.jar
+file.reference.jcommon-1.0.23.jar=F:\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=F:\\jfreechart-1.0.19.jar
 file.reference.mssql-jdbc-12.8.0.jre11.jar=D:\\Downloads\\mssql-jdbc-12.8.0.jre11.jar
 file.reference.mssql-jdbc-12.8.0.jre11.jar-1=F:\\mssql-jdbc-12.8.0.jre11.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=..\\mssql-jdbc-8.4.1.jre8.jar
@@ -58,7 +60,9 @@ javac.classpath=\
     ${file.reference.poi-4.0.1.jar}:\
     ${file.reference.poi-ooxml-4.0.1.jar}:\
     ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
-    ${file.reference.xmlbeans-3.0.2.jar}
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
