sửa lỗi định dạng tổng tiền trong biểu đồ

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -106,7 +106,9 @@ javac.classpath=\
     ${file.reference.xmlbeans-3.0.2.jar-2}:\
     <<<<<<< HEAD:\
     ${file.reference.jfreechart-1.0.19.jar-1}:\
-    ${file.reference.jcommon-1.0.23.jar-1}
+    ${file.reference.jcommon-1.0.23.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}
 =======
